pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: http-server
  labels:
    app: http-server
spec:
  volumes:
    - name: data-volume
      emptyDir: {}
  containers:
    - name: server-container
      image: python:3.13
      ports:
        - containerPort: 8000
      command: ["python"]
      args: ["-m", "http.server", "8000", "--directory", "/homework"]
      volumeMounts:
        - name: data-volume
          mountPath: /homework
      lifecycle:
        preStop:
          exec:
            command: ["/bin/sh", "-c", "rm /homework/index.html && echo 'Cleanup success' > /dev/termination-log"]
