app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home
  labels:
    # label to activate istio
    istio-injection: enabled

---
apiVersion: v1
kind: Service
metadata:
  name: http-server
  namespace: home
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: http-server
  ports:
    - protocol: TCP
      name: http-main
      port: 8080
      nodePort: 30008

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
  namespace: home
spec:
  replicas: 4
  selector:
    matchLabels:
      app.kubernetes.io/name: http-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: http-server
        # set version on POD (not on Deployment), else kiali shows warning
        app.kubernetes.io/version: 0.6.9
    spec:
      containers:
        - name: server-container
          image: ghcr.io/aaronpowell/httpstatus:155dc50c6959df1db12cc0e07da3f2e0035a1426
          ports:
            - containerPort: 8080
