deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: http-server
  ports:
    - protocol: TCP
      name: http-main
      port: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: http-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: http-server
        app.kubernetes.io/version: 0.6.9
    spec:
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: pvc-basic
        - name: config-volume
          configMap:
            name: cm-basic
      containers:
        - name: server-container
          image: python:3.13
          ports:
            - containerPort: 8080
          command: ["python"]
          args: ["-m", "http.server", "8080", "--directory", "/homework"]
          volumeMounts:
            - name: data-volume
              mountPath: /homework
            - name: config-volume
              mountPath: /homework/conf
              readOnly: true
