service-node-port-external-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server-node-port-external-ip
spec:
  externalIPs:
  # - 158.160.41.22    # master is excluded 
  - 158.160.105.145  # worker1 
  - 89.169.129.38    # worker2 
  - 158.160.46.75    # worker3 
  type: NodePort
  selector:
    app: http-server
  ports:
    - protocol: TCP
      name: mainhttp
      port: 8000
