service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
spec:
  type: NodePort
  selector:
    app: http-server
  ports:
    - protocol: TCP
      name: mainhttp
      port: 8000
      nodePort: 38000
