service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: http-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
